<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Add default login values here if wanted -->
    <string name="username_value"></string>
    <string name="display_name_value"></string>
    <string name="server_value"></string>
    <string name="dial_number_value"></string>

    <string name="avaya_mobile">Avaya Mobile Video Reference Client</string>
    <string name="app_name">Avaya Mobile Video v1.0</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="logout_button">Logout</string>
    <string name="dial_number">Callee</string>
    <string name="video_dial_button">Video</string>
    <string name="audio_only_dial_button">Audio only</string>
    <string name="uui">Context ID / UUI</string>
    <string name="call_endcall">End Call</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="call_status_dialling">Llamando</string>
    <string name="specify_number">Specify a number</string>
    <string name="login_display_name">Display name</string>
    <string name="login_server">Server</string>
    <string name="calling">Calling</string>
    <string name="call_established">Llamada Con</string>
    <string name="switch_toggle_text_on">Yes</string>
    <string name="switch_toggle_text_off">No</string>
    <string name="sdk_version">SDK version:</string>
    <string name="call_failed">Failed to make call:</string>
    <string name="progress_dialog_title">Placing the call</string>
    <string name="progress_dialog_message">Standby to talk to one of our team</string>
    <string name="error_dialog_title">An error occurred</string>
    <string name="information_dialog_title">Information</string>
    <string name="error_dialog_acknowledge">OK</string>
    <string name="failed_to_connect">Failed to connect for login</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="unknown_failure">Unknown failure</string>
    <string name="specify">Specify a</string>
    <string name="username">username</string>
    <string name="server">server</string>
    <string name="service_unavailable">Servicio no disponible</string>
    <string name="no_internet_connection_detected">Comprueba tu conexion</string>
    <string name="internet_connection_detected">conexion Detectada.</string>
    <string name="internet_connection_type">Tipo: %1</string>
    <string name="mobile_connection">Red Movil</string>
    <string name="wifi_connection">wifi</string>
    <string name="connectivity_summary">Wifi conectado: %1, mobile connected: %2</string>
    <string name="connectivity_summary_no_connection">sin conexion</string>
    <string name="capacity_reached">Call capacity reached, cannot place a call at this time</string>
    <string name="available_resolutions">Available resolutions:</string>
    <string name="settings">Settings</string>
    <string name="logging_settings">Logging Settings</string>
    <string name="email_settings">Email address to send log files</string>
    <string name="security_settings">Security</string>
    <string name="no_log_files_found">Log files could not be found or generated. In the setting click \'Log to device\' to enable log file generation</string>
    <string name="email_log_files">Emailing log files, select app to use...</string>
    <string name="uncaught_exception_email_log_files">Error Desconocido.</string>
    <string name="invalid_token">Invalid token used</string>
    <string name="get_media_error">Get media error occurred</string>
    <string name="call_quality">Call Quality</string>
    <string name="enter_valid_uui">Enter a valid UUI</string>
    <string name="port_default_summary">Default secure port is 8443, default unsecure port is 8080</string>
    <string name="certificate_not_found">Certificate not found</string>
    <string name="label1_settings">DisplayName</string>
    <string name="label2_settings">Usuario</string>
    <string name="label3_settings">Host</string>
    <string name="label4_settings">Puerto</string>
    <string name="label5_settings">Número</string>
    <string name="label6_settings">Mostrar Estadisticas</string>
    <string name="label7_settings">Guardar Ajustes</string>
    <!-- DTMF strings -->
    <string name="dtmf_1">1</string>
    <string name="dtmf_2">2</string>
    <string name="dtmf_3">3</string>
    <string name="dtmf_4">4</string>
    <string name="dtmf_5">5</string>
    <string name="dtmf_6">6</string>
    <string name="dtmf_7">7</string>
    <string name="dtmf_8">8</string>
    <string name="dtmf_9">9</string>
    <string name="dtmf_asterisk">*</string>
    <string name="dtmf_0">0</string>
    <string name="dtmf_hash">#</string>
    <string name="dtmf_a">A</string>
    <string name="dtmf_b">B</string>
    <string name="dtmf_c">C</string>
    <string name="dtmf_d">D</string>
    <string name="dtmf_dismiss">Dismiss</string>

    <!-- Report issues functionality -->
    <string name="report_issue">Feedback</string>

    <!-- Preferences -->
    <string name="preference_email_address">Email address</string>
    <string name="preference_log_to_device">Log to device</string>
    <string name="preference_log_level">Log level</string>
    <string name="preference_log_file_location">Log file location</string>
    <string name="preference_log_file_name">Log file name</string>
    <string name="preference_max_file_size">Maximum file size (Kbs)</string>
    <string name="preference_max_back_up">Maximum number of back-up files</string>
    <string name="preference_secure_login">Secure Login</string>
    <string name="preference_port">Port</string>
    <string name="preference_trust_all_certs">Trust all certs</string>

    <!-- Set this to the email address you wish to use -->
    <string name="email_address"></string>

    <!-- Logging defaults -->
    <string name="log_to_device">false</string>
    <string name="log_level">Info</string>
    <string name="log_file_name">MobileVideoReferenceClient.log</string>
    <string name="sdk_log_file_name">MobileVideoReferenceClientSDK.log</string>
    <string name="max_file_size">512</string>
    <string name="max_back_up">5</string>

    <!-- Login defaults-->
    <string name="secure_login">true</string>
    <string name="port">8443</string>
    <string name="trust_all_certs">true</string>

    <string name="support">Support</string>
    <string name="manually_enter_session_token">Manually enter a session token:</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_ajustes">Ajustes</string>
</resources>