<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:text="@string/sdk_version"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="fitStart"
        android:visibility="visible" />

    <TextView
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/login_username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/login_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/username_value"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal"
        android:text="@string/login_display_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/login_displayname_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/display_name_value"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal"
        android:text="@string/login_server"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/login_server_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/server_value"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/version_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>